feat: add deleteTodo function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,7 @@
 />
 
 <ng-container *ngFor="let todo of todos">
-  <p>{{ todo }}</p>
+  <div>
+    {{ todo.text }} <button (click)="deleteTodo(todo.id)">Delete</button>
+  </div>
 </ng-container>
